# streaming-platform-analytics

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
airflow/dags/: streaming_analytics_quality_gate.py
dashboard/: app.py
data/sample/: events.ndjson
docs/: DATA_DICTIONARY.md  IMPLEMENTATION_MILESTONES.md  INTERVIEW_GUIDE.md
sql/: analytics_queries.sql
src/streaming_analytics/: __init__.py  contracts.py  generator.py  local_pipeline.py  metrics.py  producer.py
src/streaming_analytics/spark/: __init__.py  bronze_stream.py  common.py  gold_stream.py  silver_stream.py
tests/: test_contracts.py  test_local_pipeline.py  test_metrics.py
